--- a/ui/style.css
+++ b/ui/style.css
@@ -1,22 +1,7 @@
-body {
-    font-family: sans-serif;
-    background-color: lightgrey;
-    margin-top: 75px;
+#profile{
+  margin: 0 auto;
+  max-width: 300px;
 }
-
-.center {
-    text-align: center;
+#name{
+  margin-right: 10px;
 }
-
-.text-big {
-    font-size: 300%;
-}
-
-.bold {
-    font-weight: bold;
-}
-
-.img-medium {
-    height: 200px;
-}
-
